<resources>
    <string name="app_name">MEDEdu</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_show_article">ShowArticleActivity</string>
    <string name="title_placeholder">Title</string>
    <string name="compose_placeholder">Compose..</string>
    <string name="title_activity_new_article">NewArticleActivity</string>
    <string name="title_activity_list_article">ListArticleActivity</string>
    <string name="title_activity_list_video">ListVideoActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_show_video">ShowVideoActivity</string>
    <string name="title_activity_new_video">NewVideoActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_not_a_member">Not a member?</string>
    <string name="action_guest">Guest</string>
    <string name="action_register">Register</string>
    <string name="action_is_a_member">Already a memeber?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_recent">History</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="search_hint">Explore...</string>
    <string name="action_logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_share">Share</string>
    <string name="profile_image_description">Profile Image</string>
</resources>
