<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    android:id="@+id/container"
    tools:context="com.uwimonacs.csmobile.fragments.dialogs.ConnectFragment"
    android:animateLayoutChanges="true">

    <EditText
        android:id="@+id/username" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_username"
        android:inputType="text" android:maxLines="1"
        android:singleLine="true"/>

    <EditText android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true" />

    <EditText android:id="@+id/password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/prompt_password"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true" />

    <EditText android:id="@+id/confirm" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_confirm_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/prompt_confirm_password"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true" />

    <Button android:id="@+id/connect" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/action_sign_in"
        android:textStyle="bold" />

    <Button android:id="@+id/toggle" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/action_not_a_member"
        android:textStyle="bold" />

    <Button android:id="@+id/guest" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/action_guest"
        android:textStyle="bold" />

</LinearLayout>
